tests/bad/expression_as_instruction.go
package main

func foo(x int) (int, int) {
	return x, x+1
}

func main() {
	f(5)
}
